Adição da possiblidade de re-obter o SIP Melhor controlo sobre a possiblidade de inserção/remoção de SIPs (devido ao inicio e fim das categorias) Outros pequenos melhoramentos.

--- a/PED/projecto/override.css
+++ b/PED/projecto/override.css
@@ -57,3 +57,7 @@
 .class_find {
     background-image: url("images/icons/page_find.png");
 }
+
+.class_downzip {
+    background-image: url("images/icons/box.png");
+}
