--- a/PED/projecto/override.css
+++ b/PED/projecto/override.css
@@ -2,6 +2,11 @@
 	(C) António Silva e Rui Brito - 2012/2013
 */
 
+h1 {
+    margin-right: 25px !important;
+    margin-left: 25px !important;
+}
+
 .splink{
 	text-decoration: none !important;
 }
